--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 <style>
-  :root{ --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f; }
+  :root{
+    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f;
+  }
   *{ box-sizing:border-box }
-  html,body{ height:100% }
+  html,body{ height:auto; min-height:100%; }
   body{
     margin:0; background:var(--bg); color:var(--ink);
     font:14px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     -webkit-print-color-adjust:exact; print-color-adjust:exact;
   }
-  .sheet{ width:900px; max-width:95vw; margin:22px auto; background:var(--paper);
-          border:1px solid var(--line); border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.05);
-          padding:28px 32px 26px; }
+
+  .sheet{
+    width:900px; max-width:95vw; margin:22px auto;
+    background:var(--paper); border:1px solid var(--line); border-radius:12px;
+    box-shadow:0 10px 30px rgba(0,0,0,.05);
+    padding:28px 32px 26px;
+  }
 
   /* Header */
   .header{ display:grid; grid-template-columns:1fr auto; gap:12px; align-items:center }
@@ -29,8 +35,15 @@
   .t2{ font-size:12px; color:var(--muted); margin-top:2px }
   .inv-title{ font-size:32px; letter-spacing:.04em; font-weight:900; color:var(--accent) }
 
-  .divider{ height:3px; background:linear-gradient(90deg, var(--accent) 0 15%, #c7c9cc 15% 100%); border-radius:3px; margin:12px 0 4px }
-  .site{ text-align:right; color:#4b5563; font-size:12px; margin-bottom:12px }
+  /* Slim black→grey progress bar */
+  .divider{
+    height:3px;
+    background:linear-gradient(90deg, var(--accent) 0 15%, #c7c9cc 15% 100%);
+    border-radius:3px;
+    margin:12px 0 4px;
+  }
+  /* top-right site text — now hidden per request */
+  .site{ display:none; }
 
   /* Top meta */
   .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:8px }
@@ -40,10 +53,9 @@
   .kv{ display:grid; grid-template-columns:140px 1fr; gap:6px 12px; font-size:13px }
   .label{ color:var(--muted) }
 
-  /* right meta is borderless */
   .meta-plain{ border:none; background:transparent; padding:0; text-align:right; }
   .meta-plain .kv{ grid-template-columns:1fr 140px; margin-top:4px }
-  .desc{ margin-top:8px; font-size:13px; color:#374151 }
+  .desc{ margin-top:8px; font-size:13px; color:#374151; text-align:right }
 
   /* Items */
   h3.section{ margin:18px 0 10px; font-size:16px; font-weight:800; letter-spacing:.02em; text-align:center }
@@ -52,7 +64,7 @@
     text-transform:uppercase; letter-spacing:.05em; font-size:11px; color:#4b5563;
     border-bottom:2px solid var(--accent); padding:8px 10px; background:#f3f4f6; text-align:center;
   }
-  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center }
+  tbody td{ padding:10px; border-bottom:1px solid #eceff1; text-align:center; vertical-align:middle }
   tbody td.desc-cell{ text-align:left }
   tbody tr:nth-child(2n){ background:#fafafa }
   td.num{ white-space:nowrap }
@@ -77,17 +89,20 @@
   /* Footer */
   .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; border-top:1px solid #e5e7eb; color:#374151 }
   .footer div{ display:flex; align-items:center; gap:10px; }
-  .icon{ width:28px; height:28px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
-  .icon svg{ width:16px; height:16px; stroke:#6b7280; fill:none; stroke-width:2; }
+  .icon{ width:24px; height:24px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center; }
+  .icon svg{ width:14px; height:14px; stroke:#6b7280; fill:none; stroke-width:2; }
+  .footer small{ font-size:12px }
 
   /* Print */
-  @page { size:A4; margin:14mm }
+  @page { size: A4; margin: 10mm; }
   thead{ display:table-header-group }
   tfoot{ display:table-footer-group }
   @media print{
     body{ background:#fff }
-    .sheet{ box-shadow:none; border:none; }
-    .divider{ background:#000 }
+    .sheet{ width: 190mm; margin:0 auto; box-shadow:none; border:none; padding:0 0 6mm 0; }
+    /* keep gradient bar in print — no override */
+    .footer small{ font-size:11px }
+    .sheet{ page-break-after:auto; }
   }
 </style>
 </head>
@@ -128,7 +143,7 @@
           <div class="label">Invoice no :</div><div id="invoice_number"></div>
           <div class="label">Date :</div><div id="invoice_date"></div>
         </div>
-        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700">Invoice Description</h4>
+        <h4 style="margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700; text-align:right">Invoice Description</h4>
         <div class="desc" id="invoice_description"></div>
       </div>
     </section>
@@ -137,11 +152,11 @@
     <table>
       <thead>
         <tr>
-          <th style="width:60px">No</th>
+          <th style="width:130px">Date of Work</th>
           <th>Description</th>
-          <th style="width:80px">Qty</th>
-          <th style="width:120px">Price</th>
-          <th style="width:140px">Total</th>
+          <th style="width:120px">Price / Hourly Rate</th>
+          <th style="width:80px">Cost Qty</th>
+          <th style="width:140px">Cost Total</th>
         </tr>
       </thead>
       <tbody id="items_body"></tbody>
@@ -150,11 +165,14 @@
     <section class="totals">
       <div class="pay">
         <h5>Payment Method :</h5>
+        <p><strong>Company ABN</strong> : <span id="company_abn"></span></p>
         <p><strong>Bank Name</strong> : <span id="bank_name"></span></p>
         <p><strong>Account Name</strong> : <span id="bank_acc_name"></span></p>
-        <p><strong>Account Number</strong> : <span id="bank_acc_no"></span> <span id="bank_routing_wrap"></span></p>
+        <p><strong>Account Number</strong> : <span id="bank_acc_no"></span></p>
+        <p><strong>Account BSB</strong> : <span id="bank_bsb"></span></p>
       </div>
       <div class="sum">
+        <div class="row"><div class="label">Total Hours :</div><div id="total_hours">0</div></div>
         <div class="row"><div class="label">Sub Total :</div><div id="subtotal">$0.00</div></div>
         <div class="row"><div class="label">GST <span id="tax_rate_label"></span> :</div><div id="taxes">$0.00</div></div>
         <div class="grand"><div>Grand Total :</div><div id="grand_total">$0.00</div></div>
@@ -175,131 +193,106 @@
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M2 3h4l2 5-3 2a16 16 0 0 0 7 7l2-3 5 2v4a2 2 0 0 1-2 2c-9.94 0-18-8.06-18-18a2 2 0 0 1 2-2z"/></svg>
-        </span> <span id="from_phone_footer"></span>
+        </span> <small id="from_phone_footer"></small>
       </div>
       <div>
         <span class="icon">
-          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/><path d="M2 18h20"/></svg>
-        </span> <span id="from_email_footer"></span>
+          <svg viewBox="0 0 24 24"><path d="M4 4h16a2 2 0 0 1 2 2v0l-10 7L2 6v0a2 2 0 0 1 2-2z"/><path d="M22 8l-10 7L2 8"/></svg>
+        </span> <small id="from_email_footer"></small>
       </div>
       <div>
         <span class="icon">
           <svg viewBox="0 0 24 24"><path d="M12 21s7-4.35 7-10a7 7 0 0 0-14 0c0 5.65 7 10 7 10z"/><circle cx="12" cy="11" r="3"/></svg>
-        </span> <span id="from_address_footer"></span>
+        </span> <small id="from_address_footer"></small>
       </div>
     </footer>
   </div>
 
 <script>
-  // --- helpers (original behavior preserved)
+  // ---- helpers
   const qp = new URLSearchParams(location.search);
   const get = (k, d='') => qp.get(k) ?? d;
   const ccy = get('ccy','AUD');
 
   const clean = v => {
     if(v==null||v==='') return 0;
-    const n = parseFloat(String(v).replace(/[^0-9.-]/g,''));
-    return isNaN(n)?0:n;
+    const n = parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isNaN(n)?0:n;
   };
   const money = n => Number(n||0).toLocaleString(undefined,{style:'currency',currency:ccy});
   const esc = s => String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
 
-  // Keep your original setText for plain elements
   function setText(id, value){
-    const el = document.getElementById(id);
-    if(!el) return;
+    const el = document.getElementById(id); if(!el) return;
     if(value && String(value).trim()!==''){ el.textContent = value; el.style.display=''; }
     else { el.textContent = ''; el.style.display='none'; }
-  }
-
-  // NEW: hide the label + value cell when empty (works for the .kv grid only)
-  function setTextKV(id, value){
-    const valEl = document.getElementById(id);
-    if(!valEl) return;
-    const labelEl = valEl.previousElementSibling; // the <div class="label"> before it
-    const show = value && String(value).trim()!=='';
-    if (show){
-      valEl.textContent = value;
-      valEl.style.display = '';
-      if (labelEl && labelEl.classList.contains('label')) labelEl.style.display = '';
-    } else {
-      valEl.textContent = '';
-      valEl.style.display = 'none';
-      if (labelEl && labelEl.classList.contains('label')) labelEl.style.display = 'none';
-    }
   }
 
   // Header brand
   const brand = get('from_name','');
   setText('brand_name', brand || 'Invoice');
   setText('brand_sub', get('from_web',''));
-  setText('brand_site', get('from_web',''));
+  // top-right is hidden via CSS, but we won't fill it either:
+  setText('brand_site','');
 
   // Logo
   const logo = get('from_logo','').trim();
-  if (logo) {
-    document.getElementById('from_logo_box').innerHTML =
-      `<img src="${logo}" alt="logo">`;
-  }
+  if (logo) { document.getElementById('from_logo_box').innerHTML = `<img src="${logo}" alt="logo">`; }
 
   // Title + invoice number
-  const invNum = get('invoice_number','');
-  document.getElementById('inv_title').textContent = 'INVOICE';
-  setTextKV('invoice_number', invNum); // hide "Invoice no :" label when empty
+  setText('inv_title', 'INVOICE');
+  setText('invoice_number', get('invoice_number',''));
 
   // Date formatting
   (function(){
-    const raw = get('invoice_date','');
-    let out = raw;
+    const raw = get('invoice_date',''); let out = raw;
     const d = new Date(raw);
     if (!isNaN(d.getTime())) {
       const day = String(d.getDate()).padStart(2,'0');
       const months = ["January","February","March","April","May","June","July","August","September","October","November","December"];
       out = `${day} ${months[d.getMonth()]} ${d.getFullYear()}`;
     }
-    setTextKV('invoice_date', out); // hide "Date :" label when empty
+    setText('invoice_date', out);
   })();
 
-  // Client fields (hide label+value when empty)
-  setText('client_name', get('client_name','')); // title only
-  setTextKV('client_phone', get('client_phone',''));
-  setTextKV('client_email', get('client_email',''));
-  setTextKV('client_website', get('client_website',''));
-  setTextKV('client_business_number', get('client_business_number',''));
-  setTextKV('client_address', get('client_address',''));
+  // Client
+  setText('client_name', get('client_name',''));
+  setText('client_phone', get('client_phone',''));
+  setText('client_email', get('client_email',''));
+  setText('client_website', get('client_website',''));
+  setText('client_business_number', get('client_business_number',''));
+  setText('client_address', get('client_address',''));
 
   // Description
   setText('invoice_description', get('invoice_description',''));
 
-  // Payment / bank (unchanged formatting; titles here are bold text inside <p>, not KV)
+  // Payment / bank
+  setText('company_abn', get('from_business_no',''));
   setText('bank_name', get('bank_name',''));
   setText('bank_acc_name', get('bank_acc_name',''));
   setText('bank_acc_no', get('bank_acc_no',''));
-  const routing = get('bank_routing','').trim();
-  if(routing){
-    document.getElementById('bank_routing_wrap').textContent = ` · BSB/Route ${routing}`;
-  }else{
-    document.getElementById('bank_routing_wrap').style.display = 'none';
-  }
+  const bsb = get('bank_bsb','') || get('bank_routing','');
+  setText('bank_bsb', bsb);
 
   // Footer contact from company
   setText('from_phone_footer', get('from_phone',''));
   setText('from_email_footer', get('from_email',''));
   setText('from_address_footer', get('from_address',''));
 
-  // Items parser — same format: "title::price::qty::total" joined by "||"
+  // Items parser — rows: (date?)::title::price::qty::total
   function parseItems(str){
     if(!str) return [];
-    const rowSep = /(\|\||%7C%7C)/i;
-    const colSep = /(::|%3A%3A)/i;
+    const rowSep = /(\|\||%7C%7C)/i, colSep = /(::|%3A%3A)/i;
     return str.split(rowSep).filter(s => !rowSep.test(s) && s!=='')
       .map(row => {
-        const fields = row.split(colSep).filter(s => !colSep.test(s));
-        const [title='', price='', qty='', total=''] = fields;
+        const parts = row.split(colSep).filter(s => !colSep.test(s));
+        let date='', title='', price='', qty='', total='';
+        if(parts.length === 5){ [date,title,price,qty,total] = parts; }
+        else { [title,price,qty,total] = parts; }
         return {
-          title: decodeURIComponent(title||''),
+          date: decodeURIComponent(date || ''),
+          title: decodeURIComponent(title || ''),
           price: clean(price),
-          qty: parseFloat(qty||0) || 0,
+          qty: parseFloat(qty || 0) || 0,
           total: clean(total)
         };
       });
@@ -308,20 +301,21 @@
   const items = parseItems(get('items',''));
   const tbody = document.getElementById('items_body');
   let subtotalFromItems = 0;
-
-  items.forEach((it, idx) => {
+  items.forEach(it => {
     subtotalFromItems += it.total || 0;
     const tr = document.createElement('tr');
     tr.innerHTML = `
-      <td>${idx+1}</td>
+      <td>${esc(it.date)}</td>
       <td class="desc-cell">${esc(it.title)}</td>
-      <td>${(it.qty ?? 0).toLocaleString()}</td>
       <td class="num">${money(it.price)}</td>
+      <td>${(it.qty ?? 0).toLocaleString()}</td>
       <td class="num">${money(it.total)}</td>`;
     tbody.appendChild(tr);
   });
 
-  // Totals
+  // Totals + hours
+  setText('total_hours', get('total_hours',''));
+
   let subtotal = clean(get('subtotal',''));
   if (!subtotal && subtotalFromItems) subtotal = subtotalFromItems;
 
@@ -335,24 +329,23 @@
   let grand = clean(get('grand_total',''));
   if (!grand) grand = subtotal + taxes;
 
-  document.getElementById('subtotal').textContent = money(subtotal);
-  document.getElementById('taxes').textContent = money(taxes);
+  setText('subtotal', money(subtotal));
+  setText('taxes', money(taxes));
   document.getElementById('tax_rate_label').textContent =
     (taxRate || taxRate===0) ? `(${(taxRate*100).toFixed(0)}%)` : '';
-  document.getElementById('grand_total').textContent = money(grand);
+  setText('grand_total', money(grand));
 
   // Signature
-  const sig = get('signature','').trim();
   const signerText = [get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
   if (signerText) document.getElementById('signer').textContent = signerText;
-  if (!sig && !signerText) document.getElementById('sign_block').style.display = 'none';
+  else document.getElementById('sign_block').style.display = 'none';
 
   // Terms (optional)
   const terms = get('terms','').trim();
   if(terms) document.getElementById('terms').textContent = terms;
   else document.getElementById('terms').style.display = 'none';
 
-  // Auto-print (unchanged)
+  // Auto-print
   const autoPrint = /^(1|true)$/i.test(get('print','').trim());
   if (autoPrint) {
     window.addEventListener('load', () => { try { setTimeout(() => window.print(), 0); } catch {} });
