--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <meta http-equiv="Expires" content="0" />
 <style>
   :root{
-    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb; --accent:#2f2f2f;
+    /* Core palette (Standard greys) */
+    --bg:#f6f7f8; --paper:#fff; --ink:#111827; --muted:#6b7280; --line:#e5e7eb;
+    --accent:#2f2f2f; /* overridden by ?template_colour */
     --pill:#d1d5db;
+
+    /* Standard greys for table */
+    --thead:#f3f4f6;
+    --row-alt:#fafafa;
   }
+
   *{ box-sizing:border-box }
-  html,body{ height:auto; min-height:100%; }
+  html,body{ height:auto; min-height:100% }
   body{
     margin:0; background:var(--bg); color:var(--ink);
     font:13.5px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
@@ -33,20 +40,19 @@
     width:56px; height:56px; border:1px solid var(--line); border-radius:12px;
     display:grid; place-items:center; overflow:hidden; background:#fff
   }
-  .logo:empty{ display:none; } /* hide empty logo box */
+  .logo:empty{ display:none }
   .logo img{ max-width:100%; max-height:100%; object-fit:contain }
   .t1{ font-size:20px; font-weight:800; letter-spacing:.02em }
   .t2{ font-size:12px; color:var(--muted); margin-top:2px }
 
-  /* Neutral title (not accent) */
   .inv-title{ font-size:30px; letter-spacing:.04em; font-weight:900; color:var(--ink) }
 
-  /* Top divider uses accent */
+  /* Colored top divider (kept) */
   .divider{
     height:3px; border-radius:3px; margin:12px 0 4px;
     background:linear-gradient(90deg, var(--accent) 0 15%, #c7c9cc 15% 100%);
   }
-  .site{ display:none; }
+  .site{ display:none }
 
   /* Meta blocks */
   .meta{ display:grid; grid-template-columns:1fr 1fr; gap:18px; margin-top:8px }
@@ -56,77 +62,72 @@
   .kv{ display:grid; grid-template-columns:140px 1fr; gap:6px 12px; font-size:13px }
   .label{ color:var(--muted) }
 
-  /* Right meta is borderless but LEFT-aligned and same grid as left */
-  .meta-plain{ border:none; background:transparent; padding:0; text-align:left; }
+  /* Right meta (borderless, aligned) */
+  .meta-plain{ border:none; background:transparent; padding:0; text-align:left }
   .meta-plain .kv{ grid-template-columns:140px 1fr; margin-top:4px }
   .meta-plain h4{ margin:10px 0 4px; text-transform:none; letter-spacing:0; font-weight:700; text-align:left }
-  .desc{ margin-top:8px; font-size:13px; color:#374151; }
+  .desc{ margin-top:8px; font-size:13px; color:#374151 }
 
   /* Items */
   h3.section{ margin:18px 0 10px; font-size:15px; font-weight:800; letter-spacing:.02em; text-align:center }
-  table{ width:100%; border-collapse:collapse; }
+  table{ width:100%; border-collapse:collapse }
   thead th{
     text-transform:uppercase; letter-spacing:.05em; font-size:10.5px; color:#4b5563;
-    border-bottom:none; padding:8px 10px; background:#f3f4f6; text-align:center;
+    border-bottom:none; padding:8px 10px; background:var(--thead); text-align:center;
   }
   tbody td{ padding:9px 10px; border-bottom:1px solid #eceff1; text-align:center; vertical-align:middle; font-size:12.5px }
   tbody td.desc-cell{ text-align:left }
-  tbody tr:nth-child(2n){ background:#fafafa }
+  tbody tr:nth-child(2n){ background:var(--row-alt) }
   td.num{ white-space:nowrap }
 
-  /* Totals & payment */
+  /* Totals & payment (same layout as Modern) */
   .totals{ display:grid; grid-template-columns:1fr 260px; gap:16px; margin-top:16px; align-items:start }
   .pay{ border:1px solid var(--line); border-radius:10px; padding:12px 14px; background:#fff }
   .pay h5{ margin:0 0 8px; font-weight:800; letter-spacing:.06em; text-transform:uppercase; font-size:12px; color:#4b5563 }
   .pay p{ margin:0; font-size:13px }
   .sum{ border:1px solid var(--line); border-radius:10px; background:#fff; padding:12px 14px }
-  .sum .row{ display:flex; justify-content:space-between; margin:4px 0; }
+  .sum .row{ display:flex; justify-content:space-between; margin:4px 0 }
   .sum .row .label{ color:#6b7280 }
   .grand{
     margin-top:8px; background:var(--pill); color:#111827; padding:12px 14px; border-radius:12px;
     font-weight:900; display:flex; justify-content:space-between
   }
 
-  /* Thanks & signature */
-  .thanks{ margin-top:16px; font-weight:700 }
-  .terms{ margin-top:6px; font-size:13px; color:#4b5563 }
-  .sigwrap{ display:flex; justify-content:flex-end; gap:28px; align-items:flex-end; margin-top:24px }
-  .sigline{ width:240px; border-bottom:1px solid #d1d5db; height:50px }
-  .sigmeta{ text-align:right; font-size:12px; color:#4b5563 }
+  /* Thanks, signer, terms — match Modern behavior */
+  .thanks{ margin-top:16px; font-weight:700; text-align:right }
+  .sigwrap{ display:block; margin-top:14px; text-align:right; position:relative }
+  .sigwrap::before{ content:""; display:block; height:44px } /* space to hand-sign */
+  #signer{ font-weight:700; margin-top:2px }
+  .terms{ margin-top:12px; font-size:12px; color:#4b5563; text-align:right }
 
   /* Footer */
-  .footer{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px; border-top:1px solid #e5e7eb; color:#374151 }
-  .footer div{ display:flex; align-items:center; gap:10px; }
+  .footer{
+    display:grid; grid-template-columns:1fr 1fr 1fr; gap:12px; margin-top:18px; padding-top:14px;
+    border-top:1px solid #e5e7eb; color:#374151
+  }
+  .footer div{ display:flex; align-items:center; gap:10px }
   .icon{
     width:28px; height:28px; border:1px solid #d1d5db; border-radius:50%; display:grid; place-items:center;
     padding:3px; background:#fff;
   }
-  .icon svg{ width:18px; height:18px; stroke:#6b7280; fill:none; stroke-width:2; display:block; }
+  .icon svg{ width:18px; height:18px; stroke:#6b7280; fill:none; stroke-width:2; display:block }
   .footer small{ font-size:12px }
 
   /* Print */
   @media print {
-    @page { size: A4 portrait; margin: 5mm; }
-    .sheet{ width: 200mm; margin: 0 auto; padding: 3mm 4mm 5mm; border: none; box-shadow: none; }
-    body{ font-size: 12.5px; }
-    table thead th{ font-size: 10px; }
-    tbody td{ padding: 6px; }
-    tr, td, th { page-break-inside: avoid; break-inside: avoid; }
+    @page { size:A4 portrait; margin:5mm }
+    .sheet{ width:200mm; margin:0 auto; padding:3mm 4mm 5mm; border:none; box-shadow:none }
+    body{ font-size:12.5px }
+    table thead th{ font-size:10px }
+    tbody td{ padding:6px }
+    tr,td,th{ page-break-inside:avoid; break-inside:avoid }
   }
-  @supports (-webkit-touch-callout: none) {
+  @supports (-webkit-touch-callout:none){
     @media print {
-      body { zoom: 0.88; }
-      .sheet{ width:auto; max-width:none; padding: 3mm; }
+      body{ zoom:.88 }
+      .sheet{ width:auto; max-width:none; padding:3mm }
     }
   }
-
-/* Remove only the signature line/bar */
-.sigline { display: none !important; }
-
-/* Optional: tighten spacing now that the line is gone */
-.sigwrap { gap: 8px; margin-top: 8px; }
-
-  
 </style>
 </head>
 <body>
@@ -145,7 +146,6 @@
     <div class="site" id="brand_site"></div>
 
     <section class="meta">
-      <!-- CLIENT -->
       <div class="box">
         <h4>Invoice To :</h4>
         <div class="mtitle" id="client_name"></div>
@@ -160,7 +160,6 @@
         </div>
       </div>
 
-      <!-- INVOICE META (borderless, aligned) -->
       <div class="box meta-plain">
         <div class="kv">
           <div class="label">Invoice no :</div><div id="invoice_number"></div>
@@ -203,14 +202,8 @@
     </section>
 
     <div class="thanks">Thank you for your business!</div>
+    <div class="sigwrap" id="sign_block"><div id="signer"></div></div>
     <div class="terms" id="terms"></div>
-
-    <div class="sigwrap" id="sign_block">
-      <div class="sigline"></div>
-      <div class="sigmeta">
-        <div style="font-weight:700; margin-top:8px" id="signer"></div>
-      </div>
-    </div>
 
     <footer class="footer">
       <div>
@@ -232,74 +225,57 @@
   </div>
 
 <script>
-  // ---- helpers
   const qp = new URLSearchParams(location.search);
   const get = (k, d='') => qp.get(k) ?? d;
   const ccy = get('ccy','AUD');
 
-  // Accent color from ?template_colour
-  (function(){
-    const col = (get('template_colour','') || '').trim();
-    if(col){ document.documentElement.style.setProperty('--accent', col); }
-  })();
+  (function(){ const col=(get('template_colour','')||'').trim(); if(col){ document.documentElement.style.setProperty('--accent',col); } })();
 
-  const clean = v => {
-    if(v==null||v==='') return 0;
-    const n = parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isNaN(n)?0:n;
-  };
+  const clean = v => { if(v==null||v==='') return 0; const n=parseFloat(String(v).replace(/[^0-9.-]/g,'')); return isNaN(n)?0:n; };
   const money = n => Number(n||0).toLocaleString(undefined,{style:'currency',currency:ccy});
   const esc = s => String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
 
   function setText(id, value){
-    const el = document.getElementById(id); if(!el) return;
-    if(value && String(value).trim()!==''){ el.textContent = value; el.style.display=''; }
-    else { el.textContent = ''; el.style.display='none'; }
+    const el=document.getElementById(id); if(!el) return;
+    if(value && String(value).trim()!==''){ el.textContent=value; el.style.display=''; }
+    else { el.textContent=''; el.style.display='none'; }
   }
 
   // Header brand
-  const brand = get('from_name','');
-  setText('brand_name', brand || 'Invoice');
+  setText('brand_name', get('from_name','') || 'Invoice');
   setText('brand_sub', get('from_web',''));
-  setText('brand_site',''); // hidden
+  setText('brand_site','');
 
   // Logo
-  const logoBox = document.getElementById('from_logo_box');
-  const logo = (get('from_logo','') || '').trim();
-  if (logo) {
-    const img = new Image();
-    img.alt = 'logo';
-    img.onload  = () => { logoBox.innerHTML = ''; logoBox.appendChild(img); };
-    img.onerror = () => { logoBox.style.display = 'none'; };
-    img.src = logo;
-  } else {
-    logoBox.style.display = 'none';
-  }
+  (function(){
+    const logoBox=document.getElementById('from_logo_box');
+    const logo=(get('from_logo','')||'').trim();
+    if(logo){
+      const img=new Image(); img.alt='logo';
+      img.onload=()=>{ logoBox.innerHTML=''; logoBox.appendChild(img); };
+      img.onerror=()=>{ logoBox.style.display='none'; };
+      img.src=logo;
+    } else { logoBox.style.display='none'; }
+  })();
 
-  // Title from ?tax_invoice_title (fallback "INVOICE")
+  // Title
   setText('inv_title', get('tax_invoice_title','INVOICE'));
 
-  // RIGHT META — set values
+  // Right meta
   setText('invoice_number', get('invoice_number',''));
-
-  // Date formatting
   (function(){
-    const raw = get('invoice_date',''); let out = raw;
-    const d = new Date(raw);
-    if (!isNaN(d.getTime())) {
-      const day = String(d.getDate()).padStart(2,'0');
-      const months = ["January","February","March","April","May","June","July","August","September","October","November","December"];
-      out = `${day} ${months[d.getMonth()]} ${d.getFullYear()}`;
+    const raw=get('invoice_date',''); let out=raw; const d=new Date(raw);
+    if(!isNaN(d.getTime())){
+      const day=String(d.getDate()).padStart(2,'0');
+      const months=["January","February","March","April","May","June","July","August","September","October","November","December"];
+      out=`${day} ${months[d.getMonth()]} ${d.getFullYear()}`;
     }
     setText('invoice_date', out);
   })();
 
   // Client
-  setText('client_name', get('client_name',''));
-  setText('client_phone', get('client_phone',''));
-  setText('client_email', get('client_email',''));
-  setText('client_website', get('client_website',''));
-  setText('client_business_number', get('client_business_number',''));
-  setText('client_address', get('client_address',''));
+  ['client_name','client_phone','client_email','client_website','client_business_number','client_address']
+    .forEach(id=>setText(id, get(id,'')));
 
   // Description
   setText('invoice_description', get('invoice_description',''));
@@ -309,40 +285,38 @@
   setText('bank_name', get('bank_name',''));
   setText('bank_acc_name', get('bank_acc_name',''));
   setText('bank_acc_no', get('bank_acc_no',''));
-  const bsb = get('bank_bsb','') || get('bank_routing','');
-  setText('bank_bsb', bsb);
+  setText('bank_bsb', get('bank_bsb','') || get('bank_routing',''));
 
-  // Footer contact from company
+  // Footer contact
   setText('from_phone_footer', get('from_phone',''));
   setText('from_email_footer', get('from_email',''));
   setText('from_address_footer', get('from_address',''));
 
-  // Items parser — rows: (date?)::title::price::qty::total
+  // Items
   function parseItems(str){
     if(!str) return [];
-    const rowSep = /(\|\||%7C%7C)/i, colSep = /(::|%3A%3A)/i;
-    return str.split(rowSep).filter(s => !rowSep.test(s) && s!=='')
-      .map(row => {
-        const parts = row.split(colSep).filter(s => !colSep.test(s));
-        let date='', title='', price='', qty='', total='';
-        if(parts.length === 5){ [date,title,price,qty,total] = parts; }
-        else { [title,price,qty,total] = parts; }
+    const rowSep=/(\|\||%7C%7C)/i, colSep=/(::|%3A%3A)/i;
+    return str.split(rowSep).filter(s=>!rowSep.test(s) && s!=='')
+      .map(row=>{
+        const parts=row.split(colSep).filter(s=>!colSep.test(s));
+        let date='',title='',price='',qty='',total='';
+        if(parts.length===5){ [date,title,price,qty,total]=parts; }
+        else { [title,price,qty,total]=parts; }
         return {
-          date: decodeURIComponent(date || ''),
-          title: decodeURIComponent(title || ''),
+          date: decodeURIComponent(date||''),
+          title: decodeURIComponent(title||''),
           price: clean(price),
-          qty: parseFloat(qty || 0) || 0,
+          qty: parseFloat(qty||0) || 0,
           total: clean(total)
         };
       });
   }
-
-  const items = parseItems(get('items',''));
-  const tbody = document.getElementById('items_body');
-  let subtotalFromItems = 0;
-  items.forEach(it => {
+  const items=parseItems(get('items',''));
+  const tbody=document.getElementById('items_body');
+  let subtotalFromItems=0;
+  items.forEach(it=>{
     subtotalFromItems += it.total || 0;
-    const tr = document.createElement('tr');
+    const tr=document.createElement('tr');
     tr.innerHTML = `
       <td>${esc(it.date)}</td>
       <td class="desc-cell">${esc(it.title)}</td>
@@ -352,72 +326,47 @@
     tbody.appendChild(tr);
   });
 
-  // Totals + hours
+  // Totals
   setText('total_hours', get('total_hours',''));
-
-  let subtotal = clean(get('subtotal',''));
-  if (!subtotal && subtotalFromItems) subtotal = subtotalFromItems;
-
-  let taxRate = get('tax_rate','');
-  taxRate = taxRate === '' ? '' : Number(String(taxRate).replace('%',''));
-  if (taxRate && taxRate > 1) taxRate = taxRate / 100;
-
-  let taxes = clean(get('taxes',''));
-  if (!taxes && typeof taxRate === 'number' && !isNaN(taxRate)) taxes = subtotal * taxRate;
-
-  let grand = clean(get('grand_total',''));
-  if (!grand) grand = subtotal + taxes;
+  let subtotal=clean(get('subtotal','')); if(!subtotal && subtotalFromItems) subtotal=subtotalFromItems;
+  let taxRate=get('tax_rate',''); taxRate = (taxRate===''? '' : Number(String(taxRate).replace('%',''))); if(taxRate && taxRate>1) taxRate/=100;
+  let taxes=clean(get('taxes','')); if(!taxes && typeof taxRate==='number' && !isNaN(taxRate)) taxes=subtotal*taxRate;
+  let grand=clean(get('grand_total','')); if(!grand) grand=subtotal+taxes;
 
   setText('subtotal', money(subtotal));
   setText('taxes', money(taxes));
-  document.getElementById('tax_rate_label').textContent =
-    (taxRate || taxRate===0) ? `(${(taxRate*100).toFixed(0)}%)` : '';
+  document.getElementById('tax_rate_label').textContent = (taxRate || taxRate===0) ? `(${(taxRate*100).toFixed(0)}%)` : '';
   setText('grand_total', money(grand));
 
-  // Signature
-  const signerText = [get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
-  if (signerText) document.getElementById('signer').textContent = signerText;
-  else document.getElementById('sign_block').style.display = 'none';
+  // Signer/terms
+  const signerText=[get('signer_name','').trim(), get('signer_role','').trim()].filter(Boolean).join(' · ');
+  if(signerText) document.getElementById('signer').textContent=signerText;
+  else document.getElementById('sign_block').style.display='none';
 
-  // Terms (optional)
-  const terms = get('terms','').trim();
-  if(terms) document.getElementById('terms').textContent = terms;
-  else document.getElementById('terms').style.display = 'none';
+  const terms=get('terms','').trim();
+  if(terms) document.getElementById('terms').textContent=terms;
+  else document.getElementById('terms').style.display='none';
 
   // Auto-print
-  const autoPrint = /^(1|true)$/i.test(get('print','').trim());
-  if (autoPrint) {
-    window.addEventListener('load', () => { try { setTimeout(() => window.print(), 0); } catch {} });
+  if(/^(1|true)$/i.test(get('print','').trim())){
+    window.addEventListener('load', ()=>{ try{ setTimeout(()=>window.print(),0) }catch{} });
   }
 
-  // ===== Hide titles/labels when values are empty =====
+  // Hide labels/rows when value empty
   function hideKVLabelIfEmpty(id){
-    const v = document.getElementById(id);
-    if(!v) return;
-    const isEmpty = (v.textContent || '').trim()==='' || v.style.display==='none';
-    if(isEmpty){
-      const label = v.previousElementSibling;
-      if(label && label.classList && label.classList.contains('label')){
-        label.style.display = 'none';
-      }
-    }
+    const v=document.getElementById(id); if(!v) return;
+    const isEmpty=(v.textContent||'').trim()==='' || v.style.display==='none';
+    if(isEmpty){ const label=v.previousElementSibling; if(label?.classList?.contains('label')) label.style.display='none'; }
   }
   function hidePaymentLineIfEmpty(id){
-    const v = document.getElementById(id);
-    if(!v) return;
-    const isEmpty = (v.textContent || '').trim()==='' || v.style.display==='none';
-    if(isEmpty && v.parentElement){
-      v.parentElement.style.display = 'none';
-    }
+    const v=document.getElementById(id); if(!v) return;
+    const isEmpty=(v.textContent||'').trim()==='' || v.style.display==='none';
+    if(isEmpty && v.parentElement) v.parentElement.style.display='none';
   }
   function hideFooterColIfEmpty(id){
-    const v = document.getElementById(id);
-    if(!v) return;
-    const isEmpty = (v.textContent || '').trim()==='' || v.style.display==='none';
-    if(isEmpty){
-      const col = v.closest('div');
-      if(col) col.style.display = 'none';
-    }
+    const v=document.getElementById(id); if(!v) return;
+    const isEmpty=(v.textContent||'').trim()==='' || v.style.display==='none';
+    if(isEmpty){ const col=v.closest('div'); if(col) col.style.display='none'; }
   }
   ['client_phone','client_email','client_website','client_business_number','client_address','invoice_number','invoice_date']
     .forEach(hideKVLabelIfEmpty);
