--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   /* Grand Total pill */
 .grand{
   margin-top:8px;
-  background:#f9fafb;              /* soft grey fill */
+  background:#f3f4f6;              /* soft grey fill */
   color:#111827;
   padding:12px 14px;
   border-radius:12px;               /* use 9999px if you want a rounder pill */
